fix(global): fixes after review

--- a/.github/workflows/update-pr.yml
+++ b/.github/workflows/update-pr.yml
@@ -17,7 +17,7 @@ jobs:
           uppercase-title: true
           body-template: |
             ## Задача
-            Задача в Jira: https://jira.csssr.io/browse/%branch%
+            Задача в Jira: https://jira.konakov.tv/browse/LCONSTRUCT-65
             Ссылка на стенд: https://%branch%.vega-2.csssr.cloud
 
           replace-body: false
