--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vega-2-le",
+  "name": "vega-2-lc",
   "version": "0.0.1",
   "description": "Проект VEGA 2.0 LE",
   "author": "lanit-tercom",
