fix(global): replaced LE -> LC, returned branch variable to update-pr.yml

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vega-2-lc",
   "version": "0.0.1",
-  "description": "Проект VEGA 2.0 LE",
+  "description": "Проект VEGA 2.0 LC",
   "author": "lanit-tercom",
   "license": "UNLICENSED",
   "engines": {
