--- a/package.json
+++ b/package.json
@@ -34,8 +34,15 @@
   "dependencies": {
     "@bem-react/classname": "^1.5.8",
     "@bem-react/classnames": "^1.3.9",
-    "@gpn-design/uikit": "^1.3.0",
+    "@emotion/core": "^10.0.35",
+    "@emotion/styled": "^10.0.27",
+    "@gpn-design/uikit": "^1.7.1",
+    "@gpn-prototypes/vega-canvas": "link:/../vega-ui/packages/components/canvas",
+    "@gpn-prototypes/vega-choice-group": "link:/../vega-ui/packages/components/choice-group",
+    "@gpn-prototypes/vega-icons": "link:/../vega-ui/packages/components/icons",
     "@gpn-prototypes/vega-theme": "^0.0.2",
+    "@gpn-prototypes/vega-tree": "link:/../vega-ui/packages/components/tree",
+    "@gpn-prototypes/vega-layout": "link:/../vega-ui/packages/components/layout",
     "@gpn-prototypes/vega-ui": "^2.0.0",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
@@ -44,10 +51,12 @@
     "@types/redux-thunk": "^2.1.0",
     "@types/uniqid": "^5.2.0",
     "bem-cn": "^3.0.1",
+    "konva": "^7.1.0",
     "lodash": "^4.17.19",
     "react": "^16.13.1",
     "react-collapse": "^5.0.1",
     "react-dom": "^16.13.1",
+    "react-konva": "^16.13.0-6",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-textarea-autosize": "^8.2.0",
