--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,14 @@
   "include": ["src/**/*.ts", "src/**/*.tsx"],
   "exclude": ["node_modules", "**/dist/**/*"],
   "compilerOptions": {
-    "lib": ["dom", "esnext", "es2020"]
+    "lib": ["dom", "esnext", "es2020"],
+    "target": "ES6",
+    "forceConsistentCasingInFileNames": true,
+    "noImplicitReturns": false,
+    "noImplicitThis": false,
+    "noImplicitAny": false,
+    "strictNullChecks": false,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false
   }
 }
