--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "@gpn-prototypes/vega-canvas": "link:/../vega-ui/packages/components/canvas",
     "@gpn-prototypes/vega-choice-group": "link:/../vega-ui/packages/components/choice-group",
     "@gpn-prototypes/vega-icons": "link:/../vega-ui/packages/components/icons",
+    "@gpn-prototypes/vega-root": "link:/../vega-ui/packages/components/root",
+    "@gpn-prototypes/vega-hooks": "link:/../vega-ui/packages/components/hooks",
     "@gpn-prototypes/vega-theme": "^0.0.2",
     "@gpn-prototypes/vega-tree": "link:/../vega-ui/packages/components/tree",
     "@gpn-prototypes/vega-layout": "link:/../vega-ui/packages/components/layout",
