--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
+    "@babel/plugin-transform-runtime": "^7.11.5",
     "@gpn-prototypes/frontend-configs": "0.1.0",
     "@testing-library/jest-dom": "^5.5.0",
     "@testing-library/react": "^10.0.3",
@@ -73,6 +74,7 @@
     "@types/node": "^14.0.1",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
+    "@types/react-test-renderer": "^16.9.3",
     "babel-loader": "^8.1.0",
     "commitizen": "^4.1.2",
     "cross-env": "^7.0.2",
@@ -83,6 +85,7 @@
     "jest": "^26.0.1",
     "lint-staged": "^10.2.4",
     "npm-run-all": "^4.1.5",
+    "react-test-renderer": "^16.13.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0",
