feat(components): добавление альфа версии Canvas и вынос Мероприятий в компонент  Конструктор Логики

--- a/package.json
+++ b/package.json
@@ -37,12 +37,7 @@
     "@emotion/core": "^10.0.35",
     "@emotion/styled": "^10.0.27",
     "@gpn-design/uikit": "^1.7.1",
-    "@gpn-prototypes/vega-hooks": "^0.5.0",
-    "@gpn-prototypes/vega-layout": "^0.3.1",
-    "@gpn-prototypes/vega-root": "^0.2.3",
-    "@gpn-prototypes/vega-theme": "^0.0.2",
-    "@gpn-prototypes/vega-tree": "^0.0.2",
-    "@gpn-prototypes/vega-ui": "^2.8.0",
+    "@gpn-prototypes/vega-ui": "^2.14.0-alpha.0",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
     "@types/redux": "^3.6.0",
