--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "lint-staged": "^10.2.4",
     "npm-run-all": "^4.1.5",
     "react-test-renderer": "^16.13.1",
+    "resize-observer-polyfill": "^1.5.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0",
