feat(components): реализация редакс хранилища для данных по канвасу, частичная синхронизация с BE, с
Jira issue: VEGA-871

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
   "include": ["src/**/*.ts", "src/**/*.tsx"],
   "exclude": ["node_modules", "**/dist/**/*"],
   "compilerOptions": {
-    "lib": ["dom", "esnext", "es2020"]
+    "lib": ["dom", "esnext", "es2020"],
+    "noImplicitThis": false
   }
 }
