--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/redux-logger": "^3.0.8",
     "@types/redux-thunk": "^2.1.0",
     "@types/uniqid": "^5.2.0",
+    "@types/uuid": "^8.3.0",
     "bem-cn": "^3.0.1",
     "lodash": "^4.17.19",
     "react": "^16.13.1",
@@ -58,7 +59,8 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "uniqid": "^5.2.0"
+    "uniqid": "^5.2.0",
+    "uuid": "^8.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
