--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack --progress",
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --mode development",
-    "gen:codegen": "graphql-codegen --config codegen.yml",
+    "gen:codegen": "graphql-codegen --config codegen.yml -r dotenv/config",
     "server": "cross-env NODE_ENV=development webpack-dev-server --host 0.0.0.0 --disable-host-check --open --mode development",
     "test": "jest --passWithNoTests",
     "test:watch": "jest --watch",
