--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack --progress",
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --mode development",
+    "dev:shell": "cross-env NODE_ENV=development webpack-dev-server --open --mode development --port 9005 --config ./webpack.forShellConfig.js",
     "gen:codegen": "graphql-codegen --config codegen.yml",
     "server": "cross-env NODE_ENV=development webpack-dev-server --host 0.0.0.0 --disable-host-check --open --mode development",
     "test": "jest --passWithNoTests",
@@ -40,6 +41,7 @@
     "@emotion/styled": "^10.0.27",
     "@gpn-design/uikit": "^1.7.1",
     "@gpn-prototypes/vega-ui": "^2.15.1",
+    "@types/lodash": "^4.14.165",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
     "@types/redux": "^3.6.0",
@@ -49,7 +51,7 @@
     "@types/uuid": "^8.3.0",
     "bem-cn": "^3.0.1",
     "graphql": "^15.4.0",
-    "lodash": "^4.17.19",
+    "lodash": "^4.17.20",
     "react": "^16.13.1",
     "react-collapse": "^5.0.1",
     "react-dom": "^16.13.1",
@@ -79,6 +81,7 @@
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "@types/react-test-renderer": "^16.9.3",
+    "@types/single-spa-react": "^2.12.0",
     "babel-loader": "^8.1.0",
     "commitizen": "^4.1.2",
     "cross-env": "^7.0.2",
@@ -91,9 +94,15 @@
     "npm-run-all": "^4.1.5",
     "react-test-renderer": "^16.13.1",
     "resize-observer-polyfill": "^1.5.1",
+    "single-spa-react": "^3.0.1",
+    "systemjs-webpack-interop": "^2.1.2",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
+    "webpack-config-single-spa-react": "^1.12.0",
+    "webpack-config-single-spa-react-ts": "^1.12.0",
+    "webpack-config-single-spa-ts": "^1.12.0",
     "webpack-dev-server": "^3.11.0",
+    "webpack-import-map-plugin": "^1.0.0-alpha0",
     "webpack-merge": "^4.2.2"
   }
 }
