--- a/.github/kyberta.yaml
+++ b/.github/kyberta.yaml
@@ -1,7 +1,7 @@
 version: 1-alpha.1
 
 releases:
-  vega-template-testing:
+  vega-lc-template-testing:
     name: VEGA LC
     autodeploy-on: default
     chart: csssr/static-site@~1.0.0
