--- a/package.json
+++ b/package.json
@@ -63,41 +63,36 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "single-spa-react": "^3.1.0",
     "uniqid": "^5.2.0",
     "uuid": "^8.3.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@babel/plugin-transform-runtime": "^7.11.5",
-    "@gpn-prototypes/frontend-configs": "0.1.0",
-    "@graphql-codegen/cli": "^1.19.1",
-    "@graphql-codegen/typescript": "^1.17.11",
-    "@graphql-codegen/typescript-operations": "^1.17.9",
-    "@graphql-codegen/typescript-react-apollo": "^2.1.1",
-    "@testing-library/jest-dom": "^5.5.0",
-    "@testing-library/react": "^10.0.3",
-    "@types/jest": "^25.2.1",
-    "@types/node": "^14.0.1",
-    "@types/react": "^16.9.35",
+    "@gpn-prototypes/frontend-configs": "^1.2.12",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.0.4",
+    "@types/jest": "^26.0.14",
+    "@types/node": "^14.11.8",
+    "@types/react": "^16.9.51",
     "@types/react-dom": "^16.9.8",
-    "@types/react-test-renderer": "^16.9.3",
     "@types/single-spa-react": "^2.12.0",
     "babel-loader": "^8.1.0",
-    "commitizen": "^4.1.2",
+    "commitizen": "^4.2.1",
     "cross-env": "^7.0.2",
-    "cz-customizable": "^6.2.0",
+    "cz-customizable": "^6.3.0",
     "dotenv": "^8.2.0",
-    "file-loader": "^6.0.0",
-    "husky": "^4.2.5",
-    "jest": "^26.0.1",
-    "lint-staged": "^10.2.4",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "file-loader": "^6.1.0",
+    "husky": "^4.3.0",
+    "jest": "^26.5.3",
+    "lint-staged": "^10.4.0",
     "npm-run-all": "^4.1.5",
-    "react-test-renderer": "^16.13.1",
-    "resize-observer-polyfill": "^1.5.1",
-    "single-spa-react": "^3.0.1",
+    "postcss": "^8.1.1",
+    "postcss-loader": "^4.0.4",
     "systemjs-webpack-interop": "^2.1.2",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
+    "ts-essentials": "^7.0.0",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12",
     "webpack-config-single-spa-react": "^1.12.0",
     "webpack-config-single-spa-react-ts": "^1.12.0",
     "webpack-config-single-spa-ts": "^1.12.0",
