--- a/package.json
+++ b/package.json
@@ -87,6 +87,8 @@
     "jest": "^26.5.3",
     "lint-staged": "^10.4.0",
     "npm-run-all": "^4.1.5",
+    "react-test-renderer": "^16.13.1",
+    "resize-observer-polyfill": "^1.5.1",
     "postcss": "^8.1.1",
     "postcss-loader": "^4.0.4",
     "systemjs-webpack-interop": "^2.1.2",
