--- a/package.json
+++ b/package.json
@@ -68,18 +68,19 @@
     "uuid": "^8.3.1"
   },
   "devDependencies": {
+    "@gpn-prototypes/frontend-configs": "^1.2.12",
     "@graphql-codegen/cli": "1.16.3",
     "@graphql-codegen/introspection": "1.16.3",
     "@graphql-codegen/typescript": "^1.16.3",
     "@graphql-codegen/typescript-operations": "1.16.3",
     "@graphql-codegen/typescript-react-apollo": "1.16.3",
-    "@gpn-prototypes/frontend-configs": "^1.2.12",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.0.4",
     "@types/jest": "^26.0.14",
     "@types/node": "^14.11.8",
     "@types/react": "^16.9.51",
     "@types/react-dom": "^16.9.8",
+    "@types/react-test-renderer": "^16.9.3",
     "@types/single-spa-react": "^2.12.0",
     "babel-loader": "^8.1.0",
     "commitizen": "^4.2.1",
@@ -92,10 +93,11 @@
     "jest": "^26.5.3",
     "lint-staged": "^10.4.0",
     "npm-run-all": "^4.1.5",
+    "postcss": "8.0.9",
+    "postcss-loader": "^4.0.4",
+    "postcss-nested": "^5.0.1",
     "react-test-renderer": "^16.13.1",
     "resize-observer-polyfill": "^1.5.1",
-    "postcss": "^8.1.1",
-    "postcss-loader": "^4.0.4",
     "systemjs-webpack-interop": "^2.1.2",
     "ts-essentials": "^7.0.0",
     "webpack": "^4.44.2",
