--- a/package.json
+++ b/package.json
@@ -41,14 +41,6 @@
     "@emotion/styled": "^10.0.27",
     "@gpn-design/uikit": "^1.7.1",
     "@gpn-prototypes/vega-ui": "^2.15.1",
-    "@types/lodash": "^4.14.165",
-    "@types/react-redux": "^7.1.9",
-    "@types/react-router-dom": "^5.1.5",
-    "@types/redux": "^3.6.0",
-    "@types/redux-logger": "^3.0.8",
-    "@types/redux-thunk": "^2.1.0",
-    "@types/uniqid": "^5.2.0",
-    "@types/uuid": "^8.3.0",
     "bem-cn": "^3.0.1",
     "graphql": "^15.4.0",
     "lodash": "^4.17.20",
@@ -82,6 +74,14 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-test-renderer": "^16.9.3",
     "@types/single-spa-react": "^2.12.0",
+    "@types/lodash": "^4.14.165",
+    "@types/react-redux": "^7.1.9",
+    "@types/react-router-dom": "^5.1.5",
+    "@types/redux": "^3.6.0",
+    "@types/redux-logger": "^3.0.8",
+    "@types/redux-thunk": "^2.1.0",
+    "@types/uniqid": "^5.2.0",
+    "@types/uuid": "^8.3.0",
     "babel-loader": "^8.1.0",
     "commitizen": "^4.2.1",
     "cross-env": "^7.0.2",
@@ -108,5 +108,8 @@
     "webpack-dev-server": "^3.11.0",
     "webpack-import-map-plugin": "^1.0.0-alpha0",
     "webpack-merge": "^4.2.2"
+  },
+  "resolutions": {
+    "tslib": "1.13.0"
   }
 }
