--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     }
   },
   "scripts": {
-    "build": "cross-env NODE_ENV=production webpack --progress",
+    "build": "cross-env NODE_ENV=production webpack --progress --config ./webpack.forShellConfig.js",
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --mode development",
     "dev:shell": "cross-env NODE_ENV=development webpack-dev-server --open --mode development --port 9005 --config ./webpack.forShellConfig.js",
     "gen:codegen": "graphql-codegen --config codegen.yml",
