--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "@gpn-prototypes/vega-ui": "^2.15.1",
     "bem-cn": "^3.0.1",
     "graphql": "^15.4.0",
-    "lodash": "^4.17.20",
+    "lodash.defaultto": "^4.14.0",
     "react": "^16.14.0",
     "react-collapse": "^5.0.1",
     "react-dom": "^16.13.1",
