fix: исправление url backend
Jira issue: VEGA-2677

--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,4 @@ ASSETS_PATH=/assets
 PORT=3000
 API_URL=https://yourapi.com
 ANALYZE=0
-VEGA_API_PROXY=http://outsourcing.nat.tepkom.ru:38080
+BASE_API_URL=http://outsourcing.nat.tepkom.ru:38080
