feat(components): добавление возможности добавлять и заменять мероприятие на Шаге
Jira issue: VEGA-2720

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
   "include": ["src/**/*.ts", "src/**/*.tsx"],
   "exclude": ["node_modules", "**/dist/**/*"],
   "compilerOptions": {
+    "sourceMap": true,
     "noImplicitThis": false,
     "baseUrl": "./",
     "moduleResolution": "node",
