--- a/.github/workflows/build-static.yaml
+++ b/.github/workflows/build-static.yaml
@@ -40,6 +40,7 @@ jobs:
         working-directory: vega
         env:
           BASE_URL: http://${{ steps.gh.outputs.releaseID }}.vega-lc.csssr.cloud
+          BASE_API_URL: http://ababakov-lt-vega-builder.code013.org:38080
 
       - uses: ./actions/upload-static/v1beta1
         with:
