--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "single-spa-react": "^3.1.0",
     "uniqid": "^5.2.0",
