refactor(components): created LogicConstructorService with incapsulated queries and corresponded functions
Jira issue: VEGA-2923

--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@types/uniqid": "^5.2.0",
     "@types/uuid": "^8.3.0",
     "babel-loader": "^8.1.0",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "bem-cn": "^3.0.1",
     "cross-env": "^7.0.2",
