--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "uuid": "^8.3.1"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@gpn-prototypes/frontend-configs": "^1.2.12",
     "@graphql-codegen/cli": "1.16.3",
     "@graphql-codegen/introspection": "1.16.3",
