--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,10 @@
   "include": ["src/**/*.ts", "src/**/*.tsx"],
   "exclude": ["node_modules", "**/dist/**/*"],
   "compilerOptions": {
+    "jsx": "react",
     "sourceMap": true,
     "noImplicitThis": false,
+    "target": "ES2020",
     "baseUrl": "./",
     "moduleResolution": "node",
     "paths": {
