--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "cz-customizable": "^6.3.0",
     "dotenv": "^8.2.0",
     "eslint-import-resolver-alias": "^1.1.2",
+    "fetch-mock": "^9.11.0",
     "file-loader": "^6.1.0",
     "husky": "^4.3.0",
     "jest": "^26.5.3",
