--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "postcss-loader": "^4.0.4",
     "postcss-nested": "^5.0.1",
     "react-test-renderer": "^16.13.1",
+    "redux-mock-store": "^1.5.4",
     "resize-observer-polyfill": "^1.5.1",
     "systemjs-webpack-interop": "^2.1.2",
     "ts-essentials": "^7.0.0",
