--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "@types/react-test-renderer": "^16.9.3",
     "@types/redux": "^3.6.0",
     "@types/redux-logger": "^3.0.8",
+    "@types/redux-mock-store": "^1.0.2",
     "@types/redux-thunk": "^2.1.0",
     "@types/single-spa-react": "^2.12.0",
     "@types/uniqid": "^5.2.0",
