--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "file-loader": "^6.1.0",
     "husky": "^4.3.0",
     "jest": "^26.5.3",
+    "jest-each": "^26.6.2",
     "lint-staged": "^10.4.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.1.10",
