--- a/package.json
+++ b/package.json
@@ -41,12 +41,15 @@
     "@emotion/styled": "^10.0.27",
     "@gpn-prototypes/vega-ui": "^3.0.7",
     "bem-cn": "^3.0.1",
+    "final-form": "^4.20.1",
+    "final-form-focus": "^1.1.2",
     "graphql": "^15.4.0",
     "lodash": "^4.17.20",
     "lodash.defaultto": "^4.14.0",
     "react": "^16.14.0",
     "react-collapse": "^5.0.1",
     "react-dom": "^16.13.1",
+    "react-final-form": "^6.5.2",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-textarea-autosize": "^8.2.0",
@@ -69,6 +72,7 @@
     "@graphql-codegen/typescript-react-apollo": "1.16.3",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.0.4",
+    "@types/final-form-focus": "^1.1.1",
     "@types/jest": "^26.0.14",
     "@types/lodash": "^4.14.165",
     "@types/node": "^14.11.8",
