fix(components): использование sessionStorage для сохранения splitPanesGridSize
Jira issue: VEGA-3177

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
   "exclude": ["node_modules", "**/dist/**/*"],
   "compilerOptions": {
     "sourceMap": true,
+    "target": "ES2020",
     "noImplicitThis": false,
     "baseUrl": "./",
     "moduleResolution": "node",
