--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "@types/uniqid": "^5.2.0",
     "@types/uuid": "^8.3.0",
     "babel-loader": "^8.1.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "commitizen": "^4.2.1",
     "cross-env": "^7.0.2",
     "cz-customizable": "^6.3.0",
