--- a/package.json
+++ b/package.json
@@ -39,32 +39,8 @@
     "@bem-react/classnames": "^1.3.9",
     "@emotion/core": "^10.0.35",
     "@emotion/styled": "^10.0.27",
-    "@gpn-prototypes/vega-ui": "^3.1.2",
-    "bem-cn": "^3.0.1",
-    "final-form": "^4.20.1",
-    "final-form-focus": "^1.1.2",
-    "graphql": "^15.4.0",
-    "lodash": "^4.17.20",
-    "lodash.defaultto": "^4.14.0",
-    "react": "^16.14.0",
-    "react-collapse": "^5.0.1",
-    "react-dom": "^16.13.1",
-    "react-final-form": "^6.5.2",
-    "react-redux": "^7.2.0",
-    "react-router-dom": "^5.2.0",
-    "react-textarea-autosize": "^8.2.0",
-    "react-transition-group": "^4.4.1",
-    "redux": "^4.0.5",
-    "redux-devtools-extension": "^2.13.8",
-    "redux-logger": "^3.0.6",
-    "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.3.0",
-    "single-spa-react": "^3.1.0",
-    "uniqid": "^5.2.0",
-    "uuid": "^8.3.1"
-  },
-  "devDependencies": {
-    "@gpn-prototypes/frontend-configs": "^1.2.12",
+    "@gpn-prototypes/frontend-configs": "^1.3.1",
+    "@gpn-prototypes/vega-ui": "^3.1.7",
     "@graphql-codegen/cli": "1.16.3",
     "@graphql-codegen/introspection": "1.16.3",
     "@graphql-codegen/typescript": "^1.16.3",
@@ -90,25 +66,42 @@
     "@types/uuid": "^8.3.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "commitizen": "^4.2.1",
+    "bem-cn": "^3.0.1",
     "cross-env": "^7.0.2",
-    "cz-customizable": "^6.3.0",
     "dotenv": "^8.2.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "file-loader": "^6.1.0",
-    "husky": "^4.3.0",
+    "final-form": "^4.20.1",
+    "final-form-focus": "^1.1.2",
+    "graphql": "^15.4.0",
     "jest": "^26.5.3",
     "jest-each": "^26.6.2",
-    "lint-staged": "^10.4.0",
-    "npm-run-all": "^4.1.5",
-    "postcss": "^8.1.10",
-    "postcss-loader": "^4.0.4",
-    "postcss-nested": "^5.0.1",
+    "lodash": "^4.17.20",
+    "lodash.defaultto": "^4.14.0",
+    "postcss": "^7.0.35",
+    "postcss-loader": "^4.2.0",
+    "postcss-nested": "^4.2.3",
+    "react": "^16.14.0",
+    "react-collapse": "^5.0.1",
+    "react-dom": "^16.13.1",
+    "react-final-form": "^6.5.2",
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.2.0",
     "react-test-renderer": "^16.13.1",
+    "react-textarea-autosize": "^8.2.0",
+    "react-transition-group": "^4.4.1",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-logger": "^3.0.6",
     "redux-mock-store": "^1.5.4",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.3.0",
     "resize-observer-polyfill": "^1.5.1",
+    "single-spa-react": "^3.1.0",
     "systemjs-webpack-interop": "^2.1.2",
     "ts-essentials": "^7.0.0",
+    "uniqid": "^5.2.0",
+    "uuid": "^8.3.1",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
     "webpack-config-single-spa-react": "^1.12.0",
@@ -117,6 +110,13 @@
     "webpack-dev-server": "^3.11.0",
     "webpack-import-map-plugin": "^1.0.0-alpha0",
     "webpack-merge": "^4.2.2"
+  },
+  "devDependencies": {
+    "commitizen": "^4.2.1",
+    "cz-customizable": "^6.3.0",
+    "husky": "^4.3.0",
+    "lint-staged": "^10.4.0",
+    "npm-run-all": "^4.1.5"
   },
   "resolutions": {
     "tslib": "1.13.0"
