[VEGA-2923] feat(global): Интеграция запросов для конкурентого доступа (#53)
* feat(global): concurrent access

Jira issue: VEGA-2923

* fix(components): fixed group-object mutations

Jira issue: VEGA-2923

* refactor(components): created LogicConstructorService with incapsulated queries and corresponded functions

Jira issue: VEGA-2923

* fix(components): fetchVersion use lc-service

Jira issue: VEGA-2923

* fix(components): fetch CanvasElements after every conflicted mutation

Jira issue: VEGA-2923

* test(components): tests for Lc-service

Jira issue: VEGA-2923

* fix(components): fixed error of not found node when deleting one already deleted by other user

Jira issue: VEGA-2923

* fix(components): fixed import of CanvasView

Jira issue: VEGA-2923

* fix(components): фиксы после ребейза

Jira issue: VEGA-2923

* chore(global): update yarn.lock

Jira issue: VEGA-2923

* test(components): правки по тестам

Jira issue: VEGA-2923

--- a/package.json
+++ b/package.json
@@ -65,11 +65,13 @@
     "@types/uniqid": "^5.2.0",
     "@types/uuid": "^8.3.0",
     "babel-loader": "^8.1.0",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "bem-cn": "^3.0.1",
     "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
     "eslint-import-resolver-alias": "^1.1.2",
+    "fetch-mock": "^9.11.0",
     "file-loader": "^6.1.0",
     "final-form": "^4.20.1",
     "final-form-focus": "^1.1.2",
