chore(github): удалил codeowners
Jira issue: VEGA-974

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,1 @@
-* @Yankovsky @c1n1k @fixmylie @Inzephirum @hitmanet @maksim-kononov-csssr @Davs777 @ababakov @DmitriiBo @lipgen
+* @Davs777 @ababakov @DmitriiBo @lipgen
