--- a/package.json
+++ b/package.json
@@ -117,6 +117,7 @@
     "commitizen": "^4.2.1",
     "cz-customizable": "^6.3.0",
     "husky": "^4.3.0",
+    "jest-junit": "^12.0.0",
     "lint-staged": "^10.4.0",
     "npm-run-all": "^4.1.5"
   },
